# harlequin-databricks

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: issue_template.md  pull_request_template.md
.github/workflows/: code_quality.yml  code_quality_checks.yml  code_quality_tests_ubuntu_masos.yml  pypi_release.yml  tests_windows_latest.yml
scripts/: scrape_functions.py  scrape_keywords.py
src/harlequin_databricks/: __init__.py  adapter.py  cli_options.py  completions.py  functions.csv  keywords.csv
tests/: test_adapter.py
