[tool.poetry]
name = "harlequin-databricks"
version = "0.6.0"
description = "A Harlequin adapter for Databricks."
authors = [
    "Zach Shirah <zachshirah01@gmail.com>",
    "Alex Malins <github@alexmalinsREMOVETHIS.com>",
]
license = "MIT"
homepage = "https://harlequin.sh/docs/databricks/index"
repository = "https://github.com/alexmalins/harlequin-databricks"
documentation = "https://harlequin.sh/docs/databricks/index"
readme = "README.md"
packages = [
    { include = "harlequin_databricks", from = "src" },
]

[tool.poetry.plugins."harlequin.adapter"]
databricks = "harlequin_databricks:HarlequinDatabricksAdapter"

[tool.poetry.dependencies]
python = ">=3.9,<3.14.0"
harlequin = ">=2.1.2"
databricks-sql-connector = ">=4.0.4"
databricks-sdk = { version = ">=0.57.0", optional = true }

[tool.poetry.extras]
databricks-sdk = ["databricks-sdk"]

[tool.poetry.group.dev.dependencies]
ruff = ">=0.12.1"
pytest = ">=8.4.1,"
mypy = ">=1.16.1"
importlib_metadata = { version = ">=8.7.0", python = "<3.10.0" }
beautifulsoup4 = ">=4.12.0"
types-beautifulsoup4 = ">=4.12.0.0"
lxml = ">=6.0.0"
pandas = ">=2.0.0"
pandas-stubs = ">=2.0.0.230412"
requests = ">=2.32.4"
types-requests = ">=2.32.4.20250611"

[tool.poetry.urls]
Changelog = "https://github.com/alexmalins/harlequin-databricks/blob/main/CHANGELOG.md"
Discussions = "https://github.com/alexmalins/harlequin-databricks/discussions"
Issues = "https://github.com/alexmalins/harlequin-databricks/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = ["A", "B", "E", "F", "I"]
target-version = "py39"

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.mypy]
python_version = "3.9"
disable_error_code = "unused-ignore"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_context = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
